--- a/public/controller.html
+++ b/public/controller.html
@@ -6,6 +6,10 @@
    <button onclick="move('left')">⬅️</button>
    <button onclick="move('right')">➡️</button>
    <script src="/socket.io/socket.io.js"></script>
+  <script src="https://rain-dodge-server.onrender.com/socket.io/socket.io.js"></script>
+  <script>
+    const socket = io("https://rain-dodge-server.onrender.com");
+  </script>
    <script>
      const socket = io();
      const name = prompt('이름을 입력하세요:');
