--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
  <body>
  <canvas id="game" width="800" height="600"></canvas>
  <script src="/socket.io/socket.io.js"></script>
+ <script src="https://rain-dodge-server.onrender.com/socket.io/socket.io.js"></script>
+ <script>
+   const socket = io("https://rain-dodge-server.onrender.com");
+ </script>
  <script>
    const socket = io();
    const canvas = document.getElementById('game');
