--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
    const socket = io("https://rain-dodge-server.onrender.com");
  </script>
  <script>
-   const socket = io();
+   const socket = io("https://rain-dodge-server.onrender.com");
    const canvas = document.getElementById('game');
    const ctx = canvas.getContext('2d');
 
