--- a/public/controller.html
+++ b/public/controller.html
@@ -5,7 +5,7 @@
  <body>
    <button onclick="move('left')">⬅️</button>
    <button onclick="move('right')">➡️</button>
-  <script src="https://rain-dodge-server.onrender.com/socket.io/socket.io.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io("https://rain-dodge-server.onrender.com");
   </script>
